...
                            android:layout_height="wrap_content"
                    />

                    <include layout="@layout/barcode"/>

                    <Button
                            android:id="@+id/add_barcode_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/add_barcode"
                    />

...
