...
    <string name="barcode_edit_code128">code 128</string>
    <string name="barcode_edit_code39">code 39</string>
    <string name="add_footer_image">add footer image</string>
    <string name="add_logo_image">add logo image</string>
    <string name="add_header_image">add header image</string>
    <string name="add_barcode">add Barcode</string>
    <string name="edit_barcode_dialog_title">Edit BarCode</string>
    <string name="empty_trash_dialog_message">"Really empty trash? You cannot restore "</string>
    <string name="empty_trash_dialog_title">warning</string>
    <string name="new_topic_input_hint">Title for new topic</string>
    <string name="new_topic_suggestions">Suggestions:</string>
    <string name="cannot_be_empty">cannot be empty</string>
    <string name="please_use_the_swipe_feature">Please use the swipe feature</string>
...
